Atualização nas Views

--- a/AppHotel/AppHotel/AppHotel.csproj
+++ b/AppHotel/AppHotel/AppHotel.csproj
@@ -13,6 +13,11 @@
   <ItemGroup>
     <Compile Remove="Model\CadastrarHospedagem.cs" />
     <Compile Remove="Model\CalcularHospedagem.cs" />
+    <Compile Remove="View\HospedagemCadastrada.xaml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="View\HospedagemCadastrada.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,7 +29,7 @@
     <EmbeddedResource Update="View\CadastrarHospedagem.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="View\HospedagemCadastrada.xaml">
+    <EmbeddedResource Update="View\CalcularHospedagem.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\Login.xaml">
